# money-bot

./: .env.example  .gitignore  README.md  pyproject.toml  universe.example.yaml
src/moneybot/: __init__.py  cache.py  config.py  data_layer.py  models.py
tests/: test_cache.py  test_config.py  test_data_layer.py  test_models.py  test_smoke.py
tests/analyst/: test_agent.py  test_config_analyst.py  test_factory.py  test_models.py  test_prompt.py  test_relative_strength.py
tests/backtest/: test_agent_cache.py  test_calendar.py  test_cli.py  test_clock.py  test_engine.py  test_metrics.py  test_models.py  test_price_cache.py  test_report.py
tests/execution/: test_adapter.py  test_alpaca.py  test_broker.py  test_config_execution.py  test_exports.py  test_factory.py  test_models.py  test_paper.py  test_positions.py  test_reconcile.py  test_store.py
tests/llm/: test_anthropic_client.py
tests/memory/: test_journal.py  test_lessons.py  test_models.py  test_retriever.py  test_semantic.py
tests/orchestrator/: test_engine_cycle.py  test_engine_exits.py  test_engine_gating.py  test_exits.py  test_exports.py  test_factory.py  test_market_hours.py  test_models.py  test_portfolio.py  test_sod_equity.py
tests/providers/: test_edgar_filings.py  test_rss_news.py  test_yfinance_fundamentals.py  test_yfinance_price.py
tests/research/: test_agent.py  test_factory.py  test_prompt.py  test_validate.py
tests/risk/: test_config_risk.py  test_engine.py  test_factory.py  test_kill_switch.py  test_metrics.py  test_models.py  test_sizing.py
tests/strategies/: test_base.py  (+3 more)
(+76 files in other folders)
